# TESTE-PEDRO

./: .gitignore  README.md  app.py  data.dvc  predict.py  pyproject.toml  teste_ml.py  treino_ml.py
.dvc/: config
notebooks/: 00_join_archives.ipynb  01_eda.ipynb
