[project]
name = "tech-challenge-fase2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dagshub>=0.7.0",
    "matplotlib>=3.10.9",
    "pandas==2.3.1",
    "pyarrow==21.0.0",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "streamlit>=1.58.0",
    "torch>=2.12.0",
]
